# posix-realtime

./: .gitignore  .travis.yml  AUTHORS  README.md  Setup.hs  changelog  configure  configure.ac  posix-realtime.cabal  stack.yaml
System/Posix/Realtime/: Aio.hsc  LockedMem.hsc  MQueue.hsc  RTDataTypes.hsc  RTSched.hsc  RTTime.hsc
include/: HsUnixConfig.h
