name:		posix-realtime
version:	0.0.0.5
license:	BSD3
license-file:	LICENSE
category:       System
maintainer:	mjgajda@gmail.com
synopsis:	POSIX Realtime functionality
description:
	This package gives you access to the set of operating system
	services standardised by POSIX 1003.1b (or the IEEE Portable
	Operating System Interface for Computing Environments -
	IEEE Std. 1003.1).
	.
	The package is not supported under Windows (except under Cygwin).
cabal-version: >= 1.6
build-type: Simple
extra-source-files:  README.md changelog stack.yaml AUTHORS
tested-with: GHC==7.8.4, GHC==7.10.2, GHC==7.6.3, GHC==8.4.4

library
  exposed-modules:
                  System.Posix.Realtime.MQueue
                  System.Posix.Realtime.RTSched
                  System.Posix.Realtime.LockedMem
                  System.Posix.Realtime.RTDataTypes
                  System.Posix.Realtime.RTTime
                  System.Posix.Realtime.Aio
  build-depends:  base > 4.5 && < 5, bytestring, unix
  extensions:	  CPP, ForeignFunctionInterface

source-repository head
  type:     git
  location: https://github.com/mgajda/posix-realtime.git

